<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_edit_vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.thatcherbm.gasmileagetracker.AddEditVehicle">

    <TextView
        android:text="@string/vehicledialogtitleadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleDialogTitle"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterNameTitle"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleName"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/nameHint"
        android:textColorHint="#5a383838" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editButton"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
