<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_vehicles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thatcherbm.gasmileagetracker.ViewVehicles">

    <TextView
        android:text="@string/vehiclestitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addBar">

        <Button
            android:text="@string/add"
            android:layout_height="wrap_content"
            android:id="@+id/BtnAdd"
            android:layout_weight="1"
            android:layout_width="160dp" />

        <TextView
            android:id="@+id/txtInst"
            android:text="@string/vehiclesinst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/headers">

        <TextView
            android:text="@string/namehead"
            android:layout_height="wrap_content"
            android:id="@+id/nameHead"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="0dp" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:id="@android:id/list" />

</LinearLayout>
